Use template-based XML serialization for Provisioning messages
rfc6492 defines XML to be strictly templated, not loosely formatted according to
any XML standard.

In the `DomXmlSerializer` parent class, allow two different ways to serialize
XML: for a single node, or for a full document. Only the latter includes xml
declarations. The former allowing to serialize nodes directly into a textual
template document.